tests/tooling/fixtures/native/recovery/negative/negative_switch_case_loop_escape_conservative_reject.objc3
// Negative fixture: loop/control-flow escape paths in switch case bodies remain conservative in return-path analysis.
// Expected diagnostic code(s): O3S205.
module NegativeSwitchCaseLoopEscapeConservativeReject;

fn main() -> i32 {
  let value = 1;
  switch (value) {
    case 1:
      while (value == 1) {
        break;
      }
    case 2:
      return 42;
    default:
      return 9;
  }
}
